2012-12-18  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/Integer/integerDivide.java:
	Fixed.
	* gnu/testlet/java/lang/Integer/integerModulo.java:
	Added new test related to integer modulo operation.

2012-12-17  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Integer/integerDivide.java:
	Added new test related to integer divide operation.

2012-12-14  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Float/floatToInt.java:
	* testlet/java/lang/Float/floatToLong.java:
	Added two new tests related to float to long conversions.

2012-12-13  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Double/doubleToLong.java:
	Added new test related to double to long conversions.

2012-12-12  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* testlet/java/lang/Double/doubleToInt.java:
	Added new test related to double to integer conversions.

2012-12-11  Pavel Tisnovsky  <ptisnovs@redhat.com>

	* gnu/testlet/java/lang/RuntimeException/TryCatch.java:
	* gnu/testlet/java/lang/RuntimeException/constructor.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/InstanceOf.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getConstructors.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getDeclaredConstructors.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getDeclaredFields.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getDeclaredMethods.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getFields.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getInterfaces.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getMethods.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getModifiers.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getName.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getPackage.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getSimpleName.java:
	* gnu/testlet/java/lang/RuntimeException/classInfo/getSuperclass.java: